--- a/src/fatec/poo/view/GuiQuarto.form
+++ b/src/fatec/poo/view/GuiQuarto.form
@@ -110,8 +110,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNQuarto">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="N&#xba; Quarto" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtValorDiaria">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Valor Di&#xe1;ria" noResource="true"/>
+      </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
@@ -164,9 +170,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Casal"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rdbCasalActionPerformed"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
