--- a/src/fatec/poo/view/GuiHospede.form
+++ b/src/fatec/poo/view/GuiHospede.form
@@ -134,15 +134,28 @@
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
           <Format format="###.###.###-##" subtype="-1" type="5"/>
         </Property>
+        <Property name="name" type="java.lang.String" value="CPF" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNome">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Nome" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtEndereco">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Endere&#xe7;o" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTelefone">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Telefone" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTxDesconto">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Taxa Desconto" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnConsultar">
       <Properties>
