--- a/src/fatec/poo/view/GuiQuarto.form
+++ b/src/fatec/poo/view/GuiQuarto.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="btgrpTipo">
+    <Component class="javax.swing.ButtonGroup" name="btngrpTipo">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -157,7 +157,7 @@
         <Component class="javax.swing.JRadioButton" name="rdbSolteiro">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="btgrpTipo"/>
+              <ComponentRef name="btngrpTipo"/>
             </Property>
             <Property name="selected" type="boolean" value="true"/>
             <Property name="text" type="java.lang.String" value="Solteiro"/>
@@ -166,7 +166,7 @@
         <Component class="javax.swing.JRadioButton" name="rdbCasal">
           <Properties>
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-              <ComponentRef name="btgrpTipo"/>
+              <ComponentRef name="btngrpTipo"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Casal"/>
           </Properties>
