--- a/src/fatec/poo/view/GuiRecepcionista.form
+++ b/src/fatec/poo/view/GuiRecepcionista.form
@@ -127,12 +127,24 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtRegistroFuncional">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Registro Funcional" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNome">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Nome" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtEndereco">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Endere&#xe7;o" noResource="true"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtTelefone">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="Telefone" noResource="true"/>
+      </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
