Implementação da Classe "GuiRegistro" de acordo com o Protótipo + Config dos Elementos Java Swing + Implementação Incompleta da Classe "DaoRegisto" + Criação da "tblRegistro" na basededados

--- a/src/fatec/poo/view/GuiMenu.form
+++ b/src/fatec/poo/view/GuiMenu.form
@@ -43,6 +43,22 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenuRegistro">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Registro"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemReservar">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Reservar/Liberar"/>
+                <Property name="name" type="java.lang.String" value="jMenuItemReservar" noResource="true"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemReservarActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
